--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="body__color">
   <header class="header">
     <div class="header__wrapper"><img class="header__image" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
